--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background-color: antiquewhite;
+    background-color: #cbf3f0;
 }
 
 .container {
